--- a/papers.html
+++ b/papers.html
@@ -41,6 +41,11 @@
             </div>
             <div id="papersList">
                 <!-- Papers will be listed here by JavaScript -->
+                 <div class="paper-card">
+                    <div class="paper-title">BCA I Sem - Computer foundamental (2022-23)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA I Sem_2022-23/BCA I Sem_ Computer Fundamental and Problem Solving Techniques_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
                 <div class="paper-card">
                     <div class="paper-title">BCA I Sem - Programming in C (2022-23)</div>
                     <div class="paper-meta">Semester: 1 | Year: 2022-2023</div>
@@ -57,9 +62,40 @@
                     <a class="paper-download" href="BCA-2022-23/BCA I Sem_2022-23/BCA I Sem_Principles of Management_2022-23.pdf" target="_blank">Download PDF</a>
                 </div>
                 <div class="paper-card">
+                    <div class="paper-title">BCA I Sem - Mathematics-I (2022-23)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA I Sem_2022-23/" target="_blank">Download PDF</a>
+                </div>
+                <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - Object Oriented programing using c++ (2022-23)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA II Sem-2022-23/BCA II Sem._Object Oriented Programming Using C++_BCA2001_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - IT-II (2022-23)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA II Sem-2022-23/BCA II Sem._Internet Technology and Web Design_BCA2002_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - OB-II (2022-23)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA II Sem-2022-23/BCA II Sem._Organization Behavior_BCA2003_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - FAM-II (2022-23)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA II Sem-2022-23/BCA II Sem._Financial Accounting and Management_BCA2004_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+
+                <div class="paper-card">
                     <div class="paper-title">BCA II Sem - Mathematics-II (2022-23)</div>
                     <div class="paper-meta">Semester: 2 | Year: 2022-2023</div>
                     <a class="paper-download" href="BCA-2022-23/BCA II Sem-2022-23/BCA II Sem._Mathematics-II_BCA2005_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem - DSA (2022-23)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA III Sem_ 2022-23/BCA III Sem_Data Structures Using C and C ++_2022-23.pdf" target="_blank">Download PDF</a>
                 </div>
                 <div class="paper-card">
                     <div class="paper-title">BCA III Sem - Operating Systems (2022-23)</div>
@@ -76,10 +112,35 @@
                     <div class="paper-meta">Semester: 3 | Year: 2022-2023</div>
                     <a class="paper-download" href="BCA-2022-23/BCA III Sem_ 2022-23/BCA III Sem_ Elements of Statistics_2022-23.pdf" target="_blank">Download PDF</a>
                 </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem - DBMS (2022-23)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA IV Sem-2022-23/BCA IV Sem._Database Management System_BCA4002_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem - CG (2022-23)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA IV Sem-2022-23/BCA IV Sem.-Computer Graphics & Animation_BCA4001-2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem - SOFTWARE ENGINEERING (2022-23)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA IV Sem-2022-23/BCA IV Sem._Software Engineering_BCA4003_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem - OPTIMIZATION TECHNIQUES (2022-23)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA IV Sem-2022-23/BCA IV Sem._Optimization Techniques_BCA4004_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
                 <div class="paper-card">
                     <div class="paper-title">BCA IV Sem - Mathematics-III (2022-23)</div>
                     <div class="paper-meta">Semester: 4 | Year: 2022-2023</div>
                     <a class="paper-download" href="BCA-2022-23/BCA IV Sem-2022-23/BCA IV Sem._Mathematics-III_BCA4005_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA V Sem - JAVA PROGRAMMING (2022-23)</div>
+                    <div class="paper-meta">Semester: 5 | Year: 2022-2023</div>
+                    <a class="paper-download" href="BCA-2022-23/BCA V Sem_2022-23/BCA V Sem_ Java Programming and Webpage Design_2022-23.pdf" target="_blank">Download PDF</a>
                 </div>
                 <div class="paper-card">
                     <div class="paper-title">BCA V Sem - Computer Network (2022-23)</div>
