--- a/papers.html
+++ b/papers.html
@@ -24,9 +24,9 @@
             <div class="filter-bar">
                 <select id="yearFilter">
                     <option value="">All Years</option>
-                    <option value="2024">2024-2025</option>
-                    <option value="2023">2023-2024</option>
-                    <option value="2022">2022-2023</option>
+                    <option value="2024-2025">2024-2025</option>
+                    <option value="2023-2024">2023-2024</option>
+                    <option value="2022-2023">2022-2023</option>
                 </select>
                 <select id="semesterFilter">
                     <option value="">All Semesters</option>
@@ -151,6 +151,141 @@
                     <div class="paper-title">BCA V Sem - Numerical Methods (2022-23)</div>
                     <div class="paper-meta">Semester: 5 | Year: 2022-2023</div>
                     <a class="paper-download" href="BCA-2022-23/BCA V Sem_2022-23/BCA V Sem_Numerical Methods_2022-23.pdf" target="_blank">Download PDF</a>
+                </div>
+                <div class="paper-card">
+                    <div class="paper-title">BCA I Sem - C Programing (2023-2024)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA I Sem_2023-24/BCA I Sem_ C Programming_2023-2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA I Sem - Principle of Management(2023-2024)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA I Sem_2023-24/BCA I Sem_ Principles of Management_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA I Sem -Business communication (2023-2024)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA I Sem_2023-24/BCA I Sem_Business  Communication_BCA1004_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA I Sem -Computer foundamental (2023-2024)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA I Sem_2023-24/BCA I Sem_Computer Fundamentals and Problem Solving Technoques_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA I Sem -Mathmatics (2023-2024)</div>
+                    <div class="paper-meta">Semester: 1 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA I Sem_2023-24/BCA I Sem_Mathematics I_BCA1005_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - Internet Technology(2023-2024)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA II Sem._2023-24/BCA II Sem._Internet Technology and Web Design_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA II Sem - Oops C++(2023-2024)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA II Sem._2023-24/BCA II Sem._Object Oriented Programming Using C++_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA II Sem -Organisational Behavior (2023-2024)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA II Sem._2023-24/BCA II Sem._Organisational Behaviour_BCA2003_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA II Sem -Financial Accounting (2023-2024)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA II Sem._2023-24/BCA II Sem._Financial Accounting & Management_BCA2004_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA II Sem -Mathmatics (2023-2024)</div>
+                    <div class="paper-meta">Semester: 2 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA II Sem._2023-24/BCA II Sem._Mathematics-II_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem -Python (2023-2024)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA III Sem_ 2023-24/BCA III Sem_ Python Programming_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem -DSA (2023-2024)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA III Sem_ 2023-24/BCA III Sem_Data Structure Using  C & C++_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem -Digital Electronics (2023-2024)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA III Sem_ 2023-24/BCA III Sem_ Digital Electronics and Computer Organization_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem -Operting System (2023-2024)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA III Sem_ 2023-24/BCA III Sem_Operating System_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA III Sem -Elements of Statistics (2023-2024)</div>
+                    <div class="paper-meta">Semester: 3 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA III Sem_ 2023-24/BCA III Sem_ Elements of Statistics_BCA3005_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem -Computer Graphics (2023-2024)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA IV Sem._2023-24/BCA IV Sem._Computer Graphics and Animation_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem -DBMS (2023-2024)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA IV Sem._2023-24/BCA IV Sem._Database Management System_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem -SOFTWARE ENGINEERING (2023-2024)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA IV Sem._2023-24/BCA IV Sem._Software Engineering_BCA4003_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA IV Sem -Optimization TECHNIQUES (2023-2024)</div>
+                    <div class="paper-meta">Semester: 4 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA IV Sem._2023-24/BCA IV Sem._Optimization Techniques_BCA4004_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA V Sem- _Knowledge Management(2023-2024)</div>
+                    <div class="paper-meta">Semester: 5 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA V Sem_2023-24/BCA V Sem _Knowledge Management_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                 <div class="paper-card">
+                    <div class="paper-title">BCA V Sem- JAVA Programing(2023-2024)</div>
+                    <div class="paper-meta">Semester: 5 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA V Sem_2023-24/BCA V Sem_ Java Programming and Dynamic Webpage Design_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA V Sem-Computer Network (2023-2024)</div>
+                    <div class="paper-meta">Semester: 5 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA V Sem_2023-24/BCA V Sem_ Computer Network_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA V Sem-Numerical Methods (2023-2024)</div>
+                    <div class="paper-meta">Semester: 5 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA V Sem_2023-24/BCA V Sem_ Numerical Methods_2023-24.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA VI Sem-Data Science (2023-2024)</div>
+                    <div class="paper-meta">Semester: 6 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA VI Sem_2023-24/BCA VI Sem._Data Science and Machine Learning_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA VI Sem-IOT (2023-2024)</div>
+                    <div class="paper-meta">Semester: 6 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA VI Sem_2023-24/BCA VI Sem._Internet of Things_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA VI Sem-E-commerce (2023-2024)</div>
+                    <div class="paper-meta">Semester: 6 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA VI Sem_2023-24/BCA VI Sem._E-Commerce_BCA6003_2024.pdf" target="_blank">Download PDF</a>
+                </div>
+                  <div class="paper-card">
+                    <div class="paper-title">BCA VI Sem-Cyber Security (2023-2024)</div>
+                    <div class="paper-meta">Semester: 6 | Year: 2023-2024</div>
+                    <a class="paper-download" href="BCA-2023-24/BCA VI Sem_2023-24/BCA VI Sem._Information & Cyber Security_2024.pdf" target="_blank">Download PDF</a>
                 </div>
             </div>
         </div>
